--- a/src/styles/components/_timeline.scss
+++ b/src/styles/components/_timeline.scss
@@ -25,7 +25,7 @@
   top: 0;
   width: 4px;
   height: 100%;
-  background: #2a2a2a;
+  background: #044849;
 }
 .timeline .timeline-container {
   position: relative;
@@ -58,7 +58,7 @@
   border-radius: 50%;
 }
 .timeline .timeline-container .timeline-body {
-  background: #2a2a2a;
+  background: #0b1212;
   border-radius: 3px;
   padding: 20px 20px 15px;
   box-shadow: 1px 3px 9px rgba(0, 0, 0, 0.1);
