--- a/src/styles/utilities/_buttons.scss
+++ b/src/styles/utilities/_buttons.scss
@@ -44,10 +44,10 @@
 
 .green_btn{
   cursor: pointer;
-  border: 2px solid #038b4c;
+  border: 2px solid #067778;
   padding: 10px 20px;
-  border-radius: 5px;
-  background: #038b4c;
+  border-radius: 0px;
+  background: #085051;
   color: $white;
   display: flex;
   align-items: center;
