--- a/src/styles/components/_defiNfts.scss
+++ b/src/styles/components/_defiNfts.scss
@@ -1,6 +1,9 @@
 .defi-section {
   flex-direction: column;
-
+    background-image: url('../../assets/backgroun1d.png');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  
   .description,
   .heading-small {
     align-self: flex-start;
