--- a/src/styles/components/_progressBar.scss
+++ b/src/styles/components/_progressBar.scss
@@ -13,19 +13,21 @@
   .progress-bar {
     flex: 1 1 75%;
     width: 100%;
-    background: $primary-light;
+    background: #0f1c1c;
     border-radius: 5px;
     overflow: hidden;
+    height: 35px;
 
     > .progress {
       border-radius: 5px;
-      background: $primary;
+      background: #004849;
       color: $white;
       padding: 7px 0;
       display: flex;
       align-items: center;
       justify-content: center;
       font-size: 0.9em;
+    height: 35px;
     }
   }
 }
