--- a/src/styles/components/_raritySection.scss
+++ b/src/styles/components/_raritySection.scss
@@ -2,6 +2,8 @@
 
 .rarity-section {
   flex-direction: column;
+  // padding-left: 0px !important;
+  // padding-right: 0px !important;
 
   .col-4 {
     display: flex;
