--- a/src/styles/components/_faqSection.scss
+++ b/src/styles/components/_faqSection.scss
@@ -122,12 +122,12 @@
 @media screen and (max-width: 600px) {
   .accordion {
     button {
-      font-size: 1.15em !important;
+      font-size: 16px !important;
     }
 
     .accordion-content {
       div {
-        font-size: 1.1em;
+        font-size: 16px;
       }
     }
   }
