--- a/src/styles/components/_connectwallet.scss
+++ b/src/styles/components/_connectwallet.scss
@@ -131,11 +131,16 @@
     border-bottom: 1px solid #067778;
 }
 
-.search_input {
-    margin: 15px 0px;
-    width: 80%;
-    display: flex;
-    align-items: center;
+.dh_left_box {
+    
+    .search_input {
+        margin: 15px 0px;
+        position: relative;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: stretch;
+        width: 100%;
+    }   
 }
 
 .search_input span {
