--- a/src/styles/utilities/_buttons.scss
+++ b/src/styles/utilities/_buttons.scss
@@ -57,6 +57,6 @@
 
 .btn:disabled {
   cursor: not-allowed;
-  background: #085051;
-  border: 2px solid #067778;
+  background: #515151;
+  border: 2px solid #7d7d7d;
 }
