--- a/src/styles/utilities/_buttons.scss
+++ b/src/styles/utilities/_buttons.scss
@@ -58,7 +58,7 @@
 .green_btn:focus{
   background: #085051;
   border: 2px solid #067778;
-  box-shadow: transparent;
+  box-shadow: 0 0 0 0.25rem transparent;
 }
 
 .btn:disabled {
