--- a/src/styles/components/_index.scss
+++ b/src/styles/components/_index.scss
@@ -12,3 +12,10 @@
 @forward "imageCarousel";
 @forward "totalMints";
 @forward "timeline";
+@forward 'our_story';
+@forward 'gvo_token';
+@forward 'about_gvo';
+@forward 'dhbuy_btn';
+@forward 'vibemap';
+@forward 'community';
+@forward 'bottom';
