--- a/src/styles/components/_introSection.scss
+++ b/src/styles/components/_introSection.scss
@@ -34,9 +34,9 @@
   }
 }
 
-body {
-  padding-bottom: 96px;
-}
+// body {
+//   padding-bottom: 96px;
+// }
 
 @media screen and (max-width: 600px) {
   body {
