--- a/src/styles/components/_community.scss
+++ b/src/styles/components/_community.scss
@@ -74,6 +74,7 @@
 
         .community_btn {
             display: flex;
+            flex-wrap: wrap;
             justify-content: center;
             button {
                 margin-right: 20px;
