--- a/src/styles/components/_vibemap.scss
+++ b/src/styles/components/_vibemap.scss
@@ -24,6 +24,7 @@
             background-color: #3d3c41e0;
             padding: 20px ;
             border-radius: 10px;
+            min-height: 190px;
             h6 {
                 color: #05f9bc;
                 letter-spacing: 0px;
