--- a/src/styles/components/_bottom.scss
+++ b/src/styles/components/_bottom.scss
@@ -4,16 +4,22 @@
     .bottom_contentDiv{
         text-align: center;
 
+        h6{
+            color: #ffffffb5;
+        }
+
         p{
             margin-bottom: 20px;
             color: #ffffffb5;
-            font-size: 14px;
+            font-size: 12px;
+            font-style: italic;
         }
     }
     .bottom_image{
         display: flex;
         justify-content: center;
         margin-bottom: 20px;
+        margin-top: 20px;
         img{
             width: 200px;
         }
