--- a/src/styles/components/_dhbuy_btn.scss
+++ b/src/styles/components/_dhbuy_btn.scss
@@ -47,6 +47,7 @@
 
     .dhbuy_btn_Div {
         display: flex;
+        flex-wrap: wrap;
         justify-content: center;
         margin-top: 40px;
 
