--- a/src/styles/components/_rewards.scss
+++ b/src/styles/components/_rewards.scss
@@ -1,9 +1,46 @@
 .reward_section {
     padding: 10px !important;
     text-align: center;
-    background: #153333;
+    background: #05f9bc;
     box-shadow: 0 0 10px 0 rgb(255 255 255 / 15%);
     display: flex;
-    justify-content: space-evenly;
+    // justify-content: space-evenly;
     align-items: center;
+    
+    .commit {
+        margin: 0px 40px;
+        background-color: transparent;
+        color: #000000;
+        border: 2px solid #000000;
+        border-radius: 10px;
+        padding: 6px 30px;
+        text-transform: uppercase;
+        font-size: 14px;
+        
+    }
+
+    .rewards {
+        background-color: transparent;
+        color: #000000;
+        border: 2px solid #000000;
+        border-radius: 10px;
+        padding: 6px 30px;
+        text-transform: uppercase;
+        font-size: 14px;
+
+    }
+    a.inner_nav_active{
+        background-color: #000000;
+        color: #fff;
+        border: 2px solid #000000;
+        border-radius: 10px;
+        padding: 6px 30px;
+        text-transform: uppercase;
+        font-size: 14px;
+
+    }
+    a:hover {
+        color: #05f9bc;
+        background-color: #000000;
+    }
 }
