--- a/src/styles/components/_teamSection.scss
+++ b/src/styles/components/_teamSection.scss
@@ -1,84 +1,161 @@
-@use '../abstracts/' as *;
+@use "../abstracts/" as *;
 
-.team-section {
-  flex-direction: column;
+// .team-section {
+//   flex-direction: column;
 
-  > .heading {
-    margin-bottom: 0;
+//   > .heading {
+//     margin-bottom: 0;
+//     text-align: center;
+//   }
+
+//   > .sub-heading {
+//     margin-bottom: 50px;
+//     text-align: center;
+//   }
+
+//   .column-grid {
+//     flex-wrap: wrap;
+//     align-items: flex-start;
+//     > * {
+//       width: 100%;
+//       // flex-basis: 170px;
+//       // flex-grow: 1;
+//     }
+//   }
+// }
+
+// .team-profile {
+//   background-color: #0b1212;
+//   text-align: center;
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+//   justify-content: center;
+//   padding: 20px 10px;
+//   box-shadow: 0px 0px 5px #067577;
+//   transform: translateY(0px);
+//   transition: all .5s;
+
+//   .profile-picture {
+//     width: 170px;
+//     height: 170px;
+//     margin: auto;
+//     margin-bottom: 20px;
+//     align-self: center;
+
+//     border-radius: 50%;
+//     overflow: hidden;
+//     background: $gray-100;
+
+//     img {
+//       width: 100%;
+//       height: 100%;
+//       object-fit: cover;
+//     }
+//   }
+
+//   > .sub-heading {
+//     margin-bottom: 0;
+//     color: #577e7f;
+//     font-weight: 500;
+//   }
+// }
+
+// .team-profile:hover{
+//   transform: translateY(-20px);
+// }
+
+// @media screen and (max-width: 600px) {
+//   .team-section {
+//     .column-grid {
+//       > * {
+//         width: 100%;
+//         // flex-basis: 130px;
+//       }
+//     }
+//   }
+
+//   .team-profile {
+//     .profile-picture {
+//       height: 130px;
+//       width: 130px;
+//     }
+//   }
+// }
+
+// ======================================== OurTeam =========================================
+
+.our_team_section {
+  background-color: #222129;
+
+  .ourTeam_Heading {
+    text-transform: uppercase;
+    font-size: 2.5em;
+    color: #05f9bc;
+    font-family: sans-serif;
+    font-weight: 900;
     text-align: center;
+    margin: 2em 0em;
   }
 
-  > .sub-heading {
-    margin-bottom: 50px;
-    text-align: center;
-  }
+  .container {
+    max-width: 1140px;
+    display: block;
 
-  .column-grid {
-    flex-wrap: wrap;
-    align-items: flex-start;
-    > * {
-      width: 100%;
-      // flex-basis: 170px;
-      // flex-grow: 1;
-    }
-  }
-}
+    .ourTeam_profile_div {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      .profile_div {
+        max-width: 12em;
 
-.team-profile {
-  background-color: #0b1212;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 20px 10px;
-  box-shadow: 0px 0px 5px #067577;
-  transform: translateY(0px);
-  transition: all .5s;
+        .profile_card {
+          img {
+            width: 100%;
+          }
+          .profile_details {
+            background-color: #424149;
+            padding: 10px;
+            text-align: center;
+            border-bottom-left-radius: 10px;
+            border-bottom-right-radius: 10px;
 
-  .profile-picture {
-    width: 170px;
-    height: 170px;
-    margin: auto;
-    margin-bottom: 20px;
-    align-self: center;
+            h6 {
+              margin: 0%;
+              color: #05f9bc;
+              font-size: 13px;
+            }
+            p {
+              font-size: 14px;
+            }
+            .profile_social_link {
+              display: flex;
+              justify-content: space-evenly;
+              margin-top: 10px;
 
-    border-radius: 50%;
-    overflow: hidden;
-    background: $gray-100;
-
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-  }
-
-  > .sub-heading {
-    margin-bottom: 0;
-    color: #577e7f;
-    font-weight: 500;
-  }
-}
-
-.team-profile:hover{
-  transform: translateY(-20px);
-}
-
-@media screen and (max-width: 600px) {
-  .team-section {
-    .column-grid {
-      > * {
-        width: 100%;
-        // flex-basis: 130px;
+              svg{
+                color: #05f9bc;
+              }
+            }
+          }
+        }
+        .profile_card_description {
+          color: #05f9bc;
+          font-size: 13px;
+          text-align: center;
+          margin-top: 20px;
+          line-height: 1.3;
+          letter-spacing: 0px;
+        }
       }
     }
   }
+}
 
-  .team-profile {
-    .profile-picture {
-      height: 130px;
-      width: 130px;
-    }
+@media screen and (max-width:525px){
+  .our_team_section .container .ourTeam_profile_div .profile_div{
+    width: 100%;
+    max-width: none;
+    margin: 20px 0px ;
   }
 }
