--- a/src/styles/utilities/_buttons.scss
+++ b/src/styles/utilities/_buttons.scss
@@ -44,20 +44,20 @@
 
 .green_btn{
   cursor: pointer;
-  border: 2px solid #067778;
+  border: none;
   padding: 10px 20px;
-  border-radius: 0px;
-  background: #085051;
-  color: $white;
+  border-radius: 10px;
+  background: #04f9bc;
+  color: #000000;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-weight: 500;
+  font-weight: 900;
 }
 
 .green_btn:focus{
-  background: #085051;
-  border: 2px solid #067778;
+  background: #04f9bc;
+  border: none;
   box-shadow: 0 0 0 0.25rem transparent;
 }
 
